[package]
name = "stat_latency_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
prettytable-rs = "0.10"
sevenz-rust = "0.6"
ethereum-types = { version = "0.14", features = ["serialize"] }
tdigests = "1.0"
